Finished contact page, almost finished resume page. Project needs actual pictures not just placeholders, need to remake index.

--- a/bt-portfolio/resume.html
+++ b/bt-portfolio/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wild & Wacky Vegetables</title>
+    <title>My Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -28,8 +28,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="aboutme.html">About<span class="sr-only">(current)</span></a></li>
-                <li class="active"><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li class="active"><a href="resume.html">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
 
 
@@ -41,11 +41,79 @@
 <div class="container">
     <div class="row mytitle">
         <div class="col-xs-6 titlecontent">
-            <span>My Work</span>
+            <span>Resume</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <h1 class="text-center">Ronald Marx</h1>
+            <p class="text-center">deciem.physics@gmail.com</p><hr>
+            <h3 class="text-center">Summary of Qualifications</h3><hr>
+            <p>Experienced in the collecting, organizing, and analyzing the data of material analysis. Trained in the use of SEM, AFM, and other investigative techniques. Understands changes in group tasks, as well as the logic for change. Modifies behavior to effectively handle new situations. Educated in applied physics principles, the core of solid state physics, mathematical statistics and the basics of semiconductor structure and design</p><hr>
+            <h3 class="text-center">Education and Honors</h3><hr>
+            <p><strong>Bachelor of Science,</strong>&nbsp;<em>Weber State University,</em>&nbsp;Ogden, UT 2014</p>
+            <div>
+                <ul>
+                    <li>Major: Physics with a specialization in the Physics of Materials</li>
+                    <li>Minor: Applied Mathematics</li>
+                    <li>Cumulative GPA: 3.50</li>
+                </ul>
+            </div>
+            <p><strong>Full Stack Certification,</strong>&nbsp;<em>Mountainland Applied Technical College,</em>&nbsp;Lehi, UT 2017</p>
+            <p><strong>President,</strong><em>Weber State Physics Club,</em>&nbsp;Ogden, UT 2010 - 2012</p>
+            <p><strong>Honor Roll,</strong><em>Weber State University,</em>Ogden, UT</p>
+            <p><strong>Eagle Scout</strong><em>Boy Scouts of America</em>2006</p><hr>
+            <h3 class="text-center">Experience</h3><hr>
+            <div class="resumecontent">
+                <p><strong>Teacher,</strong>&nbsp;<em>Oak Canyon Junior High/Lone Peak High School,</em>&nbsp;ASD, UT - January 2016 to Present</p>
+                <ul>
+                    <li>Taught students on the subject matter of Secondary I Math and Precalculus, adhering to all state curriculum standards. Students demonstrated mastery of all core standards by end of year, with remediation available for students that needed additional assistance</li>
+                    <li>Collaborated with other teachers in departments, allowing for a unified coursework throughout the year to optimize student learning. Unified collaboration allowed for students in any classroom the opportunity to seek help from any certified instructor on campus
+                    </li>
+                </ul>
+            </div>
+            <div class="resumecontent">
+                <p><strong>Math Aide,</strong>&nbsp;<em>Oak Canyon Junior High School,</em>Lindon, UT - 2016</p>
+                <ul>
+                    <li>Assisted students in learning core standards and principles, assisted with remediation of struggling students. Remediated students were able to rejoin current class lessons with minimal disruption of learning processes</li>
+                    <li>Assisted teachers in classroom management, helping maintain structure and order in classrooms which allowed teachers to better instruct students Worked one on one with teachers to better deepen my understanding of various techniques to help students learn, manage classrooms, and lesson planning</li>
+                </ul>
+            </div>
+            <div class="resumecontent">
+                <p><strong>Coursework in Computational Physics,</strong>&nbsp;<em>Weber State University,</em>&nbsp;Ogden, UT - 2012</p>
+                <ul>
+                    <li>Studied the basics of computational physics and Python programming, emphasizing top down design and 3-dimensional programming</li>
+                    <li>Designed multiple programs both individually and in small groups, effectively completing assignments and coordinating more complex projects within the small groups, ensuring compatibility between various parts of program written by different individuals</li>
+                    <li>Individually wrote a sorting program to fetch data from a text file, compile said data into meaningful results, and displaying said results in easy to understand visual graphs. Said program analyzed various bullet types from one ammunition manufacturer for accuracy over distance as well as range, accounting for slight variations of wind speed and other external factors</li>
+                </ul>
+            </div>
+            <div class="resumecontent">
+                <p><strong>Independent Research with University Fellowship,</strong>&nbsp;<em>Weber State University,</em>&nbsp;Ogden, UT - 2013</p>
+                <ul>
+                    <li>Paid to research graphene capacitors with an emphasis on graphene formation. Created laser converted graphene using graphite solution on PET substrate. Used SEM to discover flaws created by both graphite solution deposition as well as by heat aberrations in PET substrate</li>
+                    <li>Authored grant to fund research and was given a personal department fellowship to conduct individual guided research on graphene capacitors</li>
+                    <li>Presented findings at Weber State University’s research symposium</li>
+                </ul>
+            </div>
+            <div class="resumecontent">
+                <p><strong>Research Assistant,</strong>&nbsp;<em>Weber State University,</em>&nbsp;Ogden, UT - 2012/2013</p>
+                <ul>
+                    <li>Acted as consulting research assistant for Storm Bowling to assist ongoing investigations on key material components</li>
+                    <li>Scanned material samples using AFM for surface deformations on curved surfaces, processing multiple images per sample while looking for overall net direction and depth of surface flaws</li>
+                </ul>
+            </div>
+            <hr>
+            <h3 class="text-center">Coursework</h3><hr>
+            <p>Material investigation, optical physics, bounded partial differential equations, probability and statistics, physics of materials, electronic circuit design, electronics, quantum mechanics, classical mechanics, wave mechanics, electrodynamics, programming physical systems, special and general relativity, thermodynamics, linear algebra</p><hr>
+
+
         </div>
     </div>
 </div>
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
