--- a/bt-portfolio/contact.html
+++ b/bt-portfolio/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wild & Wacky Vegetables</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -45,29 +45,32 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-4 descriptioncontent">
+        <div class="col-md-6 descriptioncontent">
             <form class=form-horizontal" method="post" action="http://www.uxcobra.com/sendemail.php">
                 <div class="form-group">
 
                     <input type="hidden" name="emailto" value="deciem.physics@gmail.com"/>
-                    <label for="inputname" class="col-sm-2 control-label">Name:</label>
-                    <div class="col-sm-10">
+                    <label for="inputname" class="col-md-2 control-label">Name:</label>
+                    <div class="col-md-10">
                         <input class="form-control" id="inputname" type="text" placeholder="Your Name" name="emailsubject"/>
                     </div>
                 <div class="form-group">
-                    <label for="inputemail" class="col-sm-2 control-label">Email:</label>
-                    <div class="col-sm-10">
+                    <label for="inputemail" class="col-md-2 control-label">Email:</label>
+                    <div class="col-md-10">
                     <input id="inputemail" class="form-control" type="email" name="emailheader" placeholder="example@email.com"/>
                     </div>
                 </div>
-                    <label for="inputtext" class="control-label col-sm-2">Message Me:</label>
-                    <div class="col-sm-10">
+                    <label for="inputtext" class="control-label col-md-2">Message Me:</label>
+                    <div class="col-md-10">
                         <textarea id="inputtext" class="form-control" rows="3" name="emailcontent" placeholder="Send me a message"></textarea>
                     </div>
                 </div>
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary buttonbox col-xs-3 pull-right" value="Send">Send</button>
+                </div>
             </form>
         </div>
-        <div class="col-xs-8">
+        <div class="col-md-6 descriptioncontent">
 
         </div>
     </div>
@@ -102,5 +105,7 @@
 -->
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
