--- a/bt-portfolio/projects.html
+++ b/bt-portfolio/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wild & Wacky Vegetables</title>
+    <title>My Work</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -82,7 +82,7 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                 </div>
             </div>
             <div class="col-xs-8 projectcontainer">
-                <div class="row">
+                <div class="row projectrow">
 
 
                     <div class="col-md-6 burger projectbox" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
@@ -91,7 +91,7 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Computer</span>
+                            <span>Burgers</span>
                         </div>
                     </div>
                     <div class="col-md-6 beach projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
@@ -100,12 +100,12 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Computer</span>
+                            <span>Beach</span>
                         </div>
 
                     </div>
                 </div>
-                <div class="row">
+                <div class="row projectrow">
                     <div class="col-md-6 projectbox computer" id="hoverbox4" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
                         <div class="colorbox">
                             <div class="textincolorbox">
@@ -121,7 +121,7 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Computer</span>
+                            <span>Coffee</span>
                         </div>
                     </div>
                 </div>
