FInished all formatting. Now I just need to put stuff in boxes.

--- a/bt-portfolio/index.html
+++ b/bt-portfolio/index.html
@@ -45,6 +45,49 @@
             <span>My Work</span>
         </div>
     </div>
+    <div class="row indexrow">
+        <div class="col-xs-12 projectcontainer">
+            <div class="row projectrow">
+
+
+                <div class="col-md-6 aboutnavbox projectbox" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
+                    <div class="indexbox">
+                        <a class="indexanchor" href="aboutme.html"></a>
+                    </div>
+                    <div class="textprojectbox">
+                        <span>About Me</span>
+                    </div>
+                </div>
+                <div class="col-md-6 projectnavbox projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
+                    <div class="indexbox">
+                        <a class="indexanchor" href="projects.html"></a>
+                    </div>
+                    <div class="textprojectbox">
+                        <span>My Projects</span>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row projectrow">
+                <div class="col-md-6 projectbox resumenavbox" id="hoverbox4" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
+                    <div class="indexbox">
+                        <a class="indexanchor" href="resume.html"></a>
+                    </div>
+                    <div class="textprojectbox">
+                        <span>My Resume</span>
+                    </div>
+                </div>
+                <div class="col-md-6 contactmenavbox projectbox" id="hoverbox5" onmouseover="changecontent(5)" onmouseout="changecontent(1)">
+                    <div class="indexbox">
+                        <a class="indexanchor" href="contact.html"></a>
+                    </div>
+                    <div class="textprojectbox">
+                        <span>Contact Me</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
