--- a/bt-portfolio/projects.html
+++ b/bt-portfolio/projects.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="row testfill">
-            <div class="col-xs-4 descriptioncontent">
+            <div class="col-xs-7 col-md-4 descriptioncontent">
                 <div id="content1">
                 <span>Throughout the course of my Web Development, I have worked on several projects related to website
                 design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sem aliquet mi ornare maximus
@@ -81,7 +81,7 @@ Ribeye drumstick shankle ham picanha kevin. Capicola cupim meatloaf burgdoggen h
 In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incididunt officia dolor frankfurter ground round. Turkey pancetta rump shank filet mignon swine nostrud ut tri-tip in jowl bresaola. Consequat qui shoulder lorem, ea rump mollit andouille spare ribs elit ad aliqua. </span>
                 </div>
             </div>
-            <div class="col-xs-8 projectcontainer">
+            <div class="col-xs-5 col-md-8 projectcontainer">
                 <div class="row projectrow">
 
 
