--- a/bt-portfolio/resume.html
+++ b/bt-portfolio/resume.html
@@ -43,6 +43,11 @@
         <div class="col-xs-6 titlecontent">
             <span>Resume</span>
         </div>
+        <div class="dl-button pull-right col-xs-3">
+            <form class="form-horizontal">
+                <button class="pull-right btn btn-primary" type="submit" onclick="window.open('resume.pdf')">Download</button>
+            </form>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-12">
