Second day of troubleshoot. Fixed weird header

--- a/bootstrapclasses/btstrpday3.html
+++ b/bootstrapclasses/btstrpday3.html
@@ -10,6 +10,19 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
+<script>
+    function greeting(msg) {
+        for (var i=0; i < 3; i++ ) {
+            var sum = i + i;
+            if(msg == 42)
+            {
+                console.log(msg + ' ' + i);
+            }
+            console.log('sum= ' + sum)
+        }
+    }
+    greeting('42');
+</script>
 <body class="container">
     <div class="row">
         <div class="col-xs-3 well well-sm">
