--- a/bt-portfolio/index.html
+++ b/bt-portfolio/index.html
@@ -42,7 +42,7 @@
 <div class="container">
     <div class="row mytitle">
         <div class="col-xs-6 titlecontent">
-            <span>My Work</span>
+            <span>&nbsp;</span>
         </div>
     </div>
     <div class="row indexrow">
@@ -50,7 +50,7 @@
             <div class="row projectrow">
 
 
-                <div class="col-md-6 aboutnavbox projectbox" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
+                <div class="col-md-6 aboutnavbox projectbox">
                     <div class="indexbox">
                         <a class="indexanchor" href="aboutme.html"></a>
                     </div>
@@ -58,7 +58,7 @@
                         <span>About Me</span>
                     </div>
                 </div>
-                <div class="col-md-6 projectnavbox projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
+                <div class="col-md-6 projectnavbox projectbox">
                     <div class="indexbox">
                         <a class="indexanchor" href="projects.html"></a>
                     </div>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="row projectrow">
-                <div class="col-md-6 projectbox resumenavbox" id="hoverbox4" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
+                <div class="col-md-6 projectbox resumenavbox">
                     <div class="indexbox">
                         <a class="indexanchor" href="resume.html"></a>
                     </div>
@@ -77,7 +77,7 @@
                         <span>My Resume</span>
                     </div>
                 </div>
-                <div class="col-md-6 contactmenavbox projectbox" id="hoverbox5" onmouseover="changecontent(5)" onmouseout="changecontent(1)">
+                <div class="col-md-6 contactmenavbox projectbox">
                     <div class="indexbox">
                         <a class="indexanchor" href="contact.html"></a>
                     </div>
