--- a/bt-portfolio/aboutme.html
+++ b/bt-portfolio/aboutme.html
@@ -51,14 +51,25 @@
     </div>
 
     <div class="row mydescription">
-        <div class="col-xs-4 descriptioncontent">
-            <span>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
+        <div class="col-xs-8 ">
+            <h3>A Brief Summary</h3>
+            <p>I'm a full stack web development student attending the MATC. I graduated in 2014 from Weber State University
             with a degree in Materials Physics. My experiences led me to work
             with Alpine School District as a Math Teacher, however I'm currently looking to expand my knowledge
-            in the field of web development.</span>
+            in the field of web development.</p>
+            <h3>Where I'm From</h3>
+            <p>I moved to Utah from California in 2009, when I was 19, with the intent to attend college and learn more about mathematics, physics and engineering. I grew up in California, attended high school there in Corona, CA, and thought I would grow up to teach high school math. After many twists and turns, I eventually began teaching Mathematics at Lone Peak High School, however I soon learned that my true passion was to be found in programming.</p>
+            <h3>Why Programming</h3>
+            <p>After a few classes in college regarding C, Basic, Java and Python, I grew a passion for coding. As I looked for more work in the field of programming however, I quickly realized that I would need both training and experience, and after a few years enrolled myself at the Mountainland Applied Technical College to gather skills directly applicable to web development and programming. As I've learned more about web development, my passion continues to grow, and I hope to continue learning and maturing as a developer</p>
+            <h3>Future Plans</h3>
+            <p>I hope to find employment in web development, where I can hone my skills and seek further education outside of the workplace. I intend to return to college to minor in computer science, and from there progress into a masters of computer science. If further education before getting into a masters program would be necessary, I'm more than happy to instead achieve a second major in CS.</p>
         </div>
-        <div class="col-xs-8">
-            <span>Random text to figure this out</span>
+        <div class="col-xs-4 descriptioncontent left-box-shadow">
+            <div class="mypic-cont profpic"><img class="profilepic" src="images/me.jpg"> </div>
+            <h2 class="text-center"><strong>Ronald Marx</strong></h2>
+            <p class="text-center">Bachelors of Science in Physics</p>
+            <p class="text-center">Minor in Applied Mathematics</p>
+            <p class="text-center">Full Stack Web Developer</p>
         </div>
     </div>
 </div>
