--- a/bt-portfolio/projects.html
+++ b/bt-portfolio/projects.html
@@ -47,21 +47,12 @@
         <div class="row testfill">
             <div class="col-xs-7 col-md-4 descriptioncontent">
                 <div id="content1">
-                <span>Throughout the course of my Web Development, I have worked on several projects related to website
-                design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non sem aliquet mi ornare maximus
-                ut et mi. Pellentesque imperdiet sapien sapien, vitae fermentum arcu scelerisque in. Proin bibendum
-                luctus commodo. Quisque dui mi, pharetra vel lorem at, tristique pharetra ligula. Ut a dapibus dolor.
-                Fusce eget enim tristique, congue mauris nec, feugiat lorem. Nulla cursus diam a urna semper dignissim.
-                Sed scelerisque iaculis augue, id pellentesque orci varius et. Curabitur vel sem tortor. Aliquam
-                blandit sit amet odio in sollicitudin. Fusce fringilla molestie urna. Pellentesque mauris nunc,
-                placerat eu libero nec, fermentum venenatis quam. </span>
+                    <h3>A Preview of Projects</h3>
+                    <span>Throughout the course of my Web Development, I have worked on several projects related to website design. These projects all are designed to show the various skills that I learned throughout the course of the class. If you would like a copy of any of my works, please feel free to contact me via my contact page, and I would be more than happy to share and discuss any of my projects. </span>
                 </div>
                 <div id="content2" style="display:none">
-                <span>Spicy jalapeno bacon ipsum dolor amet andouille laboris in ham. Adipisicing duis lorem cupidatat quis. Cupim aute bresaola adipisicing beef ribs cow. Beef jowl boudin ribeye, labore reprehenderit turkey officia ut pastrami ball tip bacon cupim. Dolore nisi qui dolor t-bone ground round. Drumstick frankfurter bresaola, t-bone ullamco nostrud ea shoulder aute elit jerky cupim biltong picanha pork loin. In proident consequat consectetur quis ea filet mignon tenderloin fatback swine ipsum aliqua pork chop nisi.
-
-Quis dolore veniam, pastrami anim ribeye et. Fatback occaecat sunt, pancetta cow non flank. Ham hock beef ribs consequat, reprehenderit tempor in jowl aute. Proident pig rump ea pancetta t-bone id kevin sint burgdoggen.
-
-Cillum elit irure salami velit boudin eiusmod excepteur. Meatloaf non duis shankle. Porchetta pancetta occaecat laboris, cupidatat meatloaf dolore shank turkey short ribs exercitation aliquip. Sed bresaola capicola, beef ut shank short loin occaecat short ribs voluptate pork eu pariatur tenderloin venison.</span>
+                    <h3>Website Portfolio</h3>
+                    <p>The first project, I made my portfolio as an active resume and resource to hand to all interested in me. I made my portfolio using HTML, CSS and the Bootstrap framework, and designed it in an easy to navigate display and gallery of what I have done. This portfolio will be updated as more work is added to it, and will continue changing and adapting as I hone my skills as a Web Developer. This project took roughly 52 hours of work to complete, and any feedback you happen to have regarding it is always appreciated. There were two iterations of my portfolio before this, and all are available upon request.</p>
                 </div>
                 <div id="content3" style="display:none">
                 <span>Bacon ipsum dolor amet swine frankfurter bresaola, sirloin shoulder porchetta picanha hamburger short loin cow kielbasa. Drumstick pork burgdoggen hamburger, salami venison flank ribeye shank. Corned beef ground round pork drumstick strip steak turkey ball tip cupim. Tri-tip pig short ribs frankfurter t-bone.
@@ -91,7 +82,7 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Burgers</span>
+                            <span>My Portfolio</span>
                         </div>
                     </div>
                     <div class="col-md-6 beach projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
