--- a/bt-portfolio/projects.html
+++ b/bt-portfolio/projects.html
@@ -55,28 +55,43 @@
                     <p>The first project, I made my portfolio as an active resume and resource to hand to all interested in me. I made my portfolio using HTML, CSS and the Bootstrap framework, and designed it in an easy to navigate display and gallery of what I have done. This portfolio will be updated as more work is added to it, and will continue changing and adapting as I hone my skills as a Web Developer. This project took roughly 52 hours of work to complete, and any feedback you happen to have regarding it is always appreciated. There were two iterations of my portfolio before this, and all are available upon request.</p>
                 </div>
                 <div id="content3" style="display:none">
-                <span>Bacon ipsum dolor amet swine frankfurter bresaola, sirloin shoulder porchetta picanha hamburger short loin cow kielbasa. Drumstick pork burgdoggen hamburger, salami venison flank ribeye shank. Corned beef ground round pork drumstick strip steak turkey ball tip cupim. Tri-tip pig short ribs frankfurter t-bone.
-
-Ham tongue alcatra strip steak. Pork loin filet mignon shankle corned beef chicken capicola pork chuck fatback venison tenderloin hamburger flank t-bone. Landjaeger kielbasa pork loin strip steak meatball. Salami capicola strip steak pork chop doner tri-tip frankfurter leberkas. Porchetta salami alcatra, ham venison pork loin pork belly turducken tenderloin flank. Venison turkey beef flank, filet mignon ham beef ribs kevin drumstick pastrami prosciutto cupim ribeye hamburger. Turducken flank tail porchetta pork chop prosciutto tri-tip burgdoggen, capicola ribeye leberkas bacon.
-
-T-bone corned beef spare ribs, kielbasa turkey pork flank. Ground round meatball jerky filet mignon alcatra pastrami swine fatback short loin t-bone. Beef ribs burgdoggen pork chop andouille alcatra chuck. Strip steak burgdoggen bacon doner, pork loin cow tri-tip fatback short loin drumstick. Biltong pancetta pork chop capicola salami ground round tenderloin t-bone. Venison doner frankfurter fatback swine kielbasa biltong corned beef tri-tip tail. </span>
+                    <h3>Various Javascript Side Projects</h3>
+                    <p>Throughout my coursework I made various small side projects to learn and game-ify various Javascript operations. None of the artwork is my own.</p>
+                    <ul>
+                        <li>
+                            <h5><a href="../js-practice/string-exercise.html">Scrabble</a></h5>
+                            <p>A simple exercise of manipulating strings.</p>
+                        </li>
+                        <li>
+                            <h5><a href="../js-practice/monster-munch.html">Monster Munch</a></h5>
+                            <p>A fun game testing conditionals.</p>
+                        </li>
+                        <li>
+                            <h5><a href="../js-practice/calendar.html">JS Calendar</a></h5>
+                            <p>An exercise to create a dynamic calendar that can adapt to various months.</p>
+                        </li>
+                        <li>
+                            <h5><a href="../js-practice/map-pins.html">Map Pins</a></h5>
+                            <p>An exercise of using Javascript to add random markers to an image.</p>
+                        </li>
+                    </ul>
                 </div>
-                <div id="content4" style="display:none">
-                <span>Bacon ipsum dolor amet cupim biltong drumstick, leberkas pork belly pork chop tongue t-bone ribeye kielbasa salami. Shank ground round pig pork loin jowl. Beef ham hock ball tip short loin jerky tongue pork pork chop chicken porchetta. T-bone salami short ribs, brisket pancetta chuck ribeye andouille shoulder picanha boudin swine.
+                <!--<div id="content4" style="display:none">-->
+                <!--<span>Bacon ipsum dolor amet cupim biltong drumstick, leberkas pork belly pork chop tongue t-bone ribeye kielbasa salami. Shank ground round pig pork loin jowl. Beef ham hock ball tip short loin jerky tongue pork pork chop chicken porchetta. T-bone salami short ribs, brisket pancetta chuck ribeye andouille shoulder picanha boudin swine.-->
 
-Ribeye drumstick shankle ham picanha kevin. Capicola cupim meatloaf burgdoggen ham corned beef pork belly kevin meatball ground round tri-tip. Shoulder beef ribs andouille, bacon biltong flank venison beef pig pork loin turkey kielbasa capicola pork chop. Drumstick spare ribs short ribs pork belly salami meatball corned beef pancetta alcatra burgdoggen. Beef ribs salami corned beef, pastrami cupim chicken ball tip kielbasa short ribs jerky turducken jowl.</span>
-                </div>
-                <div id="content5" style="display:none">
-                <span>Spicy jalapeno bacon ipsum dolor amet tri-tip voluptate aliqua do filet mignon aliquip. Ham landjaeger consequat pork loin. Aliqua turducken strip steak anim pork chop. Proident flank short ribs ribeye eu consequat elit ham capicola. Pork belly tempor pancetta biltong deserunt venison meatball irure pariatur. Chuck officia pork belly shoulder nulla cupim in pork jowl t-bone bresaola.
+<!--Ribeye drumstick shankle ham picanha kevin. Capicola cupim meatloaf burgdoggen ham corned beef pork belly kevin meatball ground round tri-tip. Shoulder beef ribs andouille, bacon biltong flank venison beef pig pork loin turkey kielbasa capicola pork chop. Drumstick spare ribs short ribs pork belly salami meatball corned beef pancetta alcatra burgdoggen. Beef ribs salami corned beef, pastrami cupim chicken ball tip kielbasa short ribs jerky turducken jowl.</span>-->
+                <!--</div>-->
+                <!--<div id="content5" style="display:none">-->
+                <!--<span>Spicy jalapeno bacon ipsum dolor amet tri-tip voluptate aliqua do filet mignon aliquip. Ham landjaeger consequat pork loin. Aliqua turducken strip steak anim pork chop. Proident flank short ribs ribeye eu consequat elit ham capicola. Pork belly tempor pancetta biltong deserunt venison meatball irure pariatur. Chuck officia pork belly shoulder nulla cupim in pork jowl t-bone bresaola.-->
 
-In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incididunt officia dolor frankfurter ground round. Turkey pancetta rump shank filet mignon swine nostrud ut tri-tip in jowl bresaola. Consequat qui shoulder lorem, ea rump mollit andouille spare ribs elit ad aliqua. </span>
-                </div>
+<!--In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incididunt officia dolor frankfurter ground round. Turkey pancetta rump shank filet mignon swine nostrud ut tri-tip in jowl bresaola. Consequat qui shoulder lorem, ea rump mollit andouille spare ribs elit ad aliqua. </span>-->
+                <!--</div>-->
             </div>
             <div class="col-xs-5 col-md-8 projectcontainer">
                 <div class="row projectrow">
 
 
-                    <div class="col-md-6 burger projectbox" id="hoverbox2" onmouseover="changecontent(2)" onmouseout="changecontent(1)">
+                    <div class="col-md-6 burger projectbox" id="hoverbox2" onclick="changecontent(2)">
                         <div class="colorbox">
                             <div class="textincolorbox">
                             </div>
@@ -85,36 +100,36 @@ In ullamco dolore strip steak. Short loin anim meatloaf brisket. Ball tip incidi
                             <span>My Portfolio</span>
                         </div>
                     </div>
-                    <div class="col-md-6 beach projectbox" id="hoverbox3" onmouseover="changecontent(3)" onmouseout="changecontent(1)">
+                    <div class="col-md-6 computer projectbox" id="hoverbox3" onclick="changecontent(3)">
                         <div class="colorbox">
                             <div class="textincolorbox">
                             </div>
                         </div>
                         <div class="textprojectbox">
-                            <span>Beach</span>
+                            <span>Javascript Exercises</span>
                         </div>
 
                     </div>
                 </div>
-                <div class="row projectrow">
-                    <div class="col-md-6 projectbox computer" id="hoverbox4" onmouseover="changecontent(4)" onmouseout="changecontent(1)">
-                        <div class="colorbox">
-                            <div class="textincolorbox">
-                            </div>
-                        </div>
-                        <div class="textprojectbox">
-                            <span>Computer</span>
-                        </div>
-                    </div>
-                    <div class="col-md-6 coffee projectbox" id="hoverbox5" onmouseover="changecontent(5)" onmouseout="changecontent(1)">
-                        <div class="colorbox">
-                            <div class="textincolorbox">
-                            </div>
-                        </div>
-                        <div class="textprojectbox">
-                            <span>Coffee</span>
-                        </div>
-                    </div>
+                <!--<div class="row projectrow">-->
+                    <!--<div class="col-md-6 projectbox computer" id="hoverbox4" onclick="changecontent(4)">-->
+                        <!--<div class="colorbox">-->
+                            <!--<div class="textincolorbox">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="textprojectbox">-->
+                            <!--<span>Computer</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <!--<div class="col-md-6 coffee projectbox" id="hoverbox5" onclick="changecontent(5)">-->
+                        <!--<div class="colorbox">-->
+                            <!--<div class="textincolorbox">-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="textprojectbox">-->
+                            <!--<span>Coffee</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
